--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/animate.css">
     <!-- Favicon and touch icons  -->
     <link href="images/favicon.ico" rel="shortcut icon">
+    <link href="stylesheets/new.css" rel="stylesheet" />
 </head>
 
 <body class="header-sticky">
@@ -27,7 +28,7 @@
         <div class="Loading-Page">
             <h2 class="loader">加载...</h2>
         </div>
-    </section> 
+    </section>
     <!-- Boxed -->
     <div class="boxed">
         <div class="top">
@@ -56,6 +57,7 @@
                                 <li><a href="#advantage">业务优势</a></li>
                                 <li><a href="#solution">解决方案</a></li>
                                 <li><a href="#client">合作客户</a></li>
+                                <li><a href="#join">加入我们</a></li>
                                 <li><a href="#contact">联系我们</a></li>
                             </ul><!-- /.menu -->
                         </nav><!-- /.mainnav -->
@@ -63,7 +65,6 @@
                 </div><!-- /.header-inner -->
             </div>
         </header><!-- /.header -->
-
         <!-- Slider -->
         <div id="intro" class="tp-banner-container">
             <div class="tp-banner">
@@ -73,15 +74,17 @@
                         <img src="images/slides/2.jpg" alt="slider-image" />
 
                         <div class="tp-caption sfb title-slide box center color-white large" data-x="250" data-y="262"
-                            data-speed="1000" data-start="1000">智工云
+                             data-speed="1000" data-start="1000">
+                            智工云
                         </div>
 
                         <div class="tp-caption sfb title-slide box center bg-color color-white large" data-x="560"
-                            data-y="262" data-speed="1000" data-start="1000">信息科技
+                             data-y="262" data-speed="1000" data-start="1000">
+                            信息科技
                         </div>
 
                         <div class="tp-caption sft desc-slide center color-white" data-x="center" data-y="428"
-                            data-speed="1000" data-start="1500" data-easing="Power3.easeInOut">
+                             data-speed="1000" data-start="1500" data-easing="Power3.easeInOut">
                             公司正式创建于2019年3月，主要面向生产制造行业，<br>通过制造运营软件平台 + 精益生产体系导入
                             的方式，为制造企业打造数字化智能化工厂，<br>帮助企业客户：提高生产效率、降低制造成本、实现制造运营信息网络协同，完成生产制造全面升级。
                         </div>
@@ -90,10 +93,12 @@
                         <img src="images/slides/1.jpg" alt="slider-image" />
 
                         <div class="tp-caption sfl flat-box_slide" data-x="600" data-y="180" data-speed="1000"
-                            data-start="1000" data-easing="Power3.easeInOut">
+                             data-start="1000" data-easing="Power3.easeInOut">
                             <div class="title-slide">企业<span>生产信息化</span><br> 整体解决方案</div>
-                            <div class="desc-slide">一家致力于帮助生产制造企业进行产业升级的
-                                <br>工业智能平台产品及完整解决方案服务商</div>
+                            <div class="desc-slide">
+                                一家致力于帮助生产制造企业进行产业升级的
+                                <br>工业智能平台产品及完整解决方案服务商
+                            </div>
                             <div class="flat-button-slide">联系我们</div>
                         </div>
                     </li>
@@ -190,6 +195,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Flat client -->
         <section id="client" class="flat-row parallax parallax3 bg-overlay">
             <div class="overlay"></div>
@@ -197,7 +203,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="title-section text-white">
-                            <h1 class="title">客户群体</h1>
+                            <h1 class="title">合作客户</h1>
                             <span class="border-icon">
                                 <span class="title-icon"></span>
                             </span>
@@ -223,19 +229,83 @@
                 </div>
             </div>
         </section>
-        <!-- <div class="flat-row row-contact-us">
+
+        <section id="join" class="flat-row pad-bottom50px main-content blog-posts">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="flat-contact-us">
-                            <h1>企业定制解决方案？ <span>联系我们吧！</span></h1>
+                        <div class="title-section">
+                            <h1 class="title">加入我们</h1>
+                            <span class="border-icon">
+                                <span class="title-icon"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="job-title">
+                            五险一金+年终奖金+部门活动基金+住宿+加班餐补+带薪假期<br />+节日礼品+生日福利+培训学习+法定假日+晋升空间+阶段性调薪+股权激励
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="job">
+                            <h2 class="job__hd">WEB前端工程师</h2>
+                            <div class="job__bd">
+                                <p>
+                                    1、一年以上Web前端开发经验，精通HTML+CSS、JavaScript等Web前端开发技术，擅长手写代码；
+                                    <br />
+                                    2、精通JQuery，能熟练使用BootStrap、CSS，了解HTML5、SASS、nodeJS、webPack，有angular2/4经验者优先；
+                                    <br />
+                                    3、掌握面向对象思想，有较强的逻辑思维能力，较好编程基础，能快速理解开发需求，有良好的代码书写风格。
+                                    <br />
+                                    工作时间:08:30~12:00,13:30~17：00，双休，法定节假日正常休息。
+                                    <br />
+                                    年薪：5万-12万
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="job">
+                            <h2 class="job__hd">软件开发工程师</h2>
+                            <div class="job__bd">
+                                <p>
+                                    1、有.net开发经验；有大型软件项目设计经验者优先；
+                                    <br />
+                                    2、熟悉关系型数据库（SqlServer、Orcale或MySql）；
+                                    <br />
+                                    3、熟练使用C#，asp.net，SQLServer
+                                    <br />
+                                    4、有较强的逻辑思维能力,能独立完成软件功能的开发，有良好的代码书写风格。
+                                    <br />
+                                    工作时间:08:30~12:00,13:30~17：00，双休，法定节假日正常休息。
+                                    <br />
+                                    年薪：6万-15万
+
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </section>
+        <div class="flat-row row-contact-us">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="flat-contact-us">
+                            <h1>赶快加入我们！ <span>联系我们</span></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Map Ifomation -->
-        <div id="contact" class="flat-row pad-top60px pad-bottom0px bg-contact">
+        <div id="contact" class="flat-row bg-contact">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -243,7 +313,7 @@
                             <ul class="information">
                                 <li><span>联系电话: </span>0553-0612100</li>
                                 <li><span>联系地址: </span>安徽芜湖市银湖北路38号科创中心软件园509室</li>
-                                <li><span>邮箱咨询: </span>Alitstudios@gmail.com</li>
+                                <li><span>乘车路线: </span>可乘坐公交23、45路在【科创中心】站下。</li>
                             </ul>
                             <ul class="short-code flat-socials">
                                 <li>
@@ -257,13 +327,13 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flat-divider d70px"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="flat-map shadow margin-left">
                             <a href="http://map.baidu.com/?newmap=1&amp;ie=utf-8&amp;s=s%26wd%3D%E5%AE%89%E5%BE%BD%E8%8A%9C%E6%B9%96%E5%B8%82%E9%93%B6%E6%B9%96%E5%8C%97%E8%B7%AF38%E5%8F%B7"
-                                class="hover-brackets" target="_blank">
-                                <img style="display: block" src="./images/map.jpg"> </a>
+                               class="hover-brackets" target="_blank">
+                                <img style="display: block" src="./images/map.jpg">
+                            </a>
                         </div>
                     </div>
                 </div>
