--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <head>
     <!-- Basic Page Needs -->
@@ -71,7 +71,7 @@
                 <ul>
                     <li data-transition="random-static" data-slotamount="7" data-masterspeed="1000"
                         data-saveperformance="on">
-                        <img src="images/slides/2.jpg" alt="slider-image" />
+                        <img src="images/banner/1.jpg" alt="slider-image" />
 
                         <div class="tp-caption sfb title-slide box center color-white large" data-x="250" data-y="262"
                              data-speed="1000" data-start="1000">
@@ -90,7 +90,7 @@
                         </div>
                     </li>
                     <li data-transition="slideup" data-slotamount="7" data-masterspeed="1000" data-saveperformance="on">
-                        <img src="images/slides/1.jpg" alt="slider-image" />
+                        <img src="images/banner/2.jpg" alt="slider-image" />
 
                         <div class="tp-caption sfl flat-box_slide" data-x="600" data-y="180" data-speed="1000"
                              data-start="1000" data-easing="Power3.easeInOut">
@@ -197,7 +197,7 @@
         </section>
 
         <!-- Flat client -->
-        <section id="client" class="flat-row parallax parallax3 bg-overlay">
+        <section id="client" class="flat-row parallax parallax3 bg-overlay" style="background-image:url(../images/banner/6.jpg)">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
