--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="top">
             <div class="language">
                 <ul class="flat-information">
-                    <li class="email"><a href="mailto:jacelu@outlook.com">jacelu@outlook.com</a></li>
-                    <li class="phone"><a href="tel:15300000000">+86 153 0000 0000</a></li>
+                    <li class="email"><a href="mailto:yobin@yeah.net">yobin@yeah.net</a></li>
+                    <li class="phone"><a href="tel:17856693923">+86 17856693923</a></li>
                 </ul>
             </div>
         </div>
@@ -245,48 +245,30 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="job-title">
-                            五险一金+年终奖金+部门活动基金+住宿+加班餐补+带薪假期<br />+节日礼品+生日福利+培训学习+法定假日+晋升空间+阶段性调薪+股权激励
+                            专业智造，需要优秀的专业人才。我们诚邀有志于打造中国先进的中国数字化智造平台的同仁加入我们
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="job">
-                            <h2 class="job__hd">WEB前端工程师</h2>
+                            <h2 class="job__hd">诚聘</h2>
                             <div class="job__bd">
-                                <p>
-                                    1、一年以上Web前端开发经验，精通HTML+CSS、JavaScript等Web前端开发技术，擅长手写代码；
-                                    <br />
-                                    2、精通JQuery，能熟练使用BootStrap、CSS，了解HTML5、SASS、nodeJS、webPack，有angular2/4经验者优先；
-                                    <br />
-                                    3、掌握面向对象思想，有较强的逻辑思维能力，较好编程基础，能快速理解开发需求，有良好的代码书写风格。
-                                    <br />
-                                    工作时间:08:30~12:00,13:30~17：00，双休，法定节假日正常休息。
-                                    <br />
-                                    年薪：5万-12万
-
-                                </p>
+                                <h4>软件开发项目经理、软件开发工程师、软件测试工程师</h4>
+                                <p>详细岗位要求见公司招聘主页  <a href="https://companyadc.51job.com/companyads/ads/32/31424/31423461/index.htm" class="btn btn-sm btn_orange">查看招聘</a></p>
+                                <p>公司提供优厚的薪资待遇、广阔的发展空间和专业的培训。</p>
+                                <h5>除提供五险一金法定福利，尚有带薪假、项目奖金、餐补、生日祝福、定期旅游、乃至股权激励等。</h5>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="job">
-                            <h2 class="job__hd">软件开发工程师</h2>
+                            <h2 class="job__hd">诚邀</h2>
                             <div class="job__bd">
-                                <p>
-                                    1、有.net开发经验；有大型软件项目设计经验者优先；
-                                    <br />
-                                    2、熟悉关系型数据库（SqlServer、Orcale或MySql）；
-                                    <br />
-                                    3、熟练使用C#，asp.net，SQLServer
-                                    <br />
-                                    4、有较强的逻辑思维能力,能独立完成软件功能的开发，有良好的代码书写风格。
-                                    <br />
-                                    工作时间:08:30~12:00,13:30~17：00，双休，法定节假日正常休息。
-                                    <br />
-                                    年薪：6万-15万
-
-                                </p>
+                                <h4>
+                                    工业智造、生产管理、质量管理等各方面专业人士来我公司合作，打造专业兼职咨询团队。
+                                </h4>
+                                <h4>欢迎生产线改造相关硬件供应商、专家来我公司洽谈、合作。</h4>
                             </div>
                         </div>
                     </div>
@@ -298,7 +280,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="flat-contact-us">
-                            <h1>赶快加入我们！ <span>联系我们</span></h1>
+                            <h1>加入我们！ <span>联系我们</span></h1>
+                            <p>应聘可在公司招聘网页投递简历或发送邮件至：<a>yobin@yeah.net</a></p>
+                            <p>咨询电话：<a>17856693923</a></p>
+                            <p>专家咨询合作可直接拨打公司官方联系电话</p>
                         </div>
                     </div>
                 </div>
@@ -311,11 +296,11 @@
                     <div class="col-md-6">
                         <div class="widget-sv sv-information border">
                             <ul class="information">
-                                <li><span>联系电话: </span>0553-0612100</li>
-                                <li><span>联系地址: </span>安徽芜湖市银湖北路38号科创中心软件园509室</li>
-                                <li><span>乘车路线: </span>可乘坐公交23、45路在【科创中心】站下。</li>
+                                <li><span>联系电话: </span>17856693923</li>
+                                <li><span>联系地址: </span>安徽芜湖市银湖北路38号科创中心软件园</li>
+                                <li><span>乘车路线: </span>可乘坐公交23、47路在【科创中心】站下。</li>
                             </ul>
-                            <ul class="short-code flat-socials">
+                            <!--<ul class="short-code flat-socials">
                                 <li>
                                     <a href="#"><i class="fa fa-qq"></i></a>
                                 </li>
@@ -325,7 +310,7 @@
                                 <li>
                                     <a href="#"><i class="fa fa-weibo"></i></a>
                                 </li>
-                            </ul>
+                            </ul>-->
                         </div>
                     </div>
                     <div class="col-md-6">
