--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
     <title>智工云科技</title>
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="author" content="芜湖智工云">
+    <meta name="keywords" content="erp、plm、oa、srm、bpm、智能工厂、企业管理、仓库管理">
+    <meta name="description" content="帮助企业客户：提高生产效率、降低制造成本、实现制造运营信息网络协同，完成生产制造全面升级。">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap  -->
@@ -34,8 +34,8 @@
         <div class="top">
             <div class="language">
                 <ul class="flat-information">
-                    <li class="email"><a href="mailto:yobin@yeah.net">yobin@yeah.net</a></li>
-                    <li class="phone"><a href="tel:17856693923">+86 17856693923</a></li>
+                    <li class="email"><a href="mailto:qianli1306@126.com">qianli1306@126.com</a></li>
+                    <li class="phone"><a href="tel:15212290566">+86 15212290566</a></li>
                 </ul>
             </div>
         </div>
@@ -296,9 +296,10 @@
                     <div class="col-md-6">
                         <div class="widget-sv sv-information border">
                             <ul class="information">
-                                <li><span>联系电话: </span>17856693923</li>
-                                <li><span>联系地址: </span>安徽芜湖市银湖北路38号科创中心软件园</li>
-                                <li><span>乘车路线: </span>可乘坐公交23、47路在【科创中心】站下。</li>
+                                <li><span>联系电话: </span>152 1229 0566</li>
+                                <li><span>联系地址: </span>安徽芜湖市银湖北路38号科创中心软件园509室</li>
+                                <li><span>邮箱咨询: </span>qianli1306@126.com</li>
+                                <!--<li><span>乘车路线: </span>可乘坐公交23、47路在【科创中心】站下。</li>-->  
                             </ul>
                             <!--<ul class="short-code flat-socials">
                                 <li>
